updated for type 4 error

--- a/pyhack2021-balaji-sathyamurthy.ipynb
+++ b/pyhack2021-balaji-sathyamurthy.ipynb
@@ -123,7 +123,7 @@
     "         \n",
     "        # checking for type 4 error\n",
     "        \n",
-    "        processedAeKeys = {}\n",
+    "        processedCeKeys = {}\n",
     "        \n",
     "        for i in range(len(ceDataset)):\n",
     "            \n",
@@ -133,13 +133,15 @@
     "            formidx = ceDataset[i][\"formidx\"]\n",
     "            cmtrt = ceDataset[i][\"cmtrt\"]      \n",
     "            \n",
-    "            if (subjid,cmtrt) in processedAeKeys:\n",
+    "            if (subjid,cmtrt) in processedCeKeys:\n",
     "                \n",
     "                if (formname,formid,formidx,aeterm) in outputTypes and \\\n",
     "                self.type4 not in outputTypes[(formname,formid,formidx,subjid)]:\n",
     "                    outputTypes[(formname,formid,formidx,subjid)].append(self.type4)        \n",
     "                else:\n",
-    "                    outputTypes[(formname,formid,formidx,subjid)] = [self.type4]                \n",
+    "                    outputTypes[(formname,formid,formidx,subjid)] = [self.type4]  \n",
+    "            else:\n",
+    "                processedCeKeys[(subjid,cmtrt)] = 1\n",
     "                            \n",
     "        return outputTypes                \n",
     "\n",
@@ -247,7 +249,209 @@
       "('AE202', 38768, 9, 166621) <Response [200]>\n",
       "('AE202', 38768, 13, 166621) <Response [200]>\n",
       "('AE202', 38768, 30, 166621) <Response [200]>\n",
-      "('AE202', 38768, 46, 166621) <Response [200]>\n"
+      "('AE202', 38768, 46, 166621) <Response [200]>\n",
+      "('AE202', 38768, 5, 205861) <Response [200]>\n",
+      "('AE202', 38768, 6, 205861) <Response [200]>\n",
+      "('AE202', 38768, 7, 205861) <Response [200]>\n",
+      "('AE202', 38768, 8, 205861) <Response [200]>\n",
+      "('AE202', 38768, 1, 231407) <Response [200]>\n",
+      "('AE202', 38768, 5, 231407) <Response [200]>\n",
+      "('AE202', 38768, 6, 231407) <Response [200]>\n",
+      "('AE202', 38768, 8, 231407) <Response [200]>\n",
+      "('AE202', 38768, 9, 231407) <Response [200]>\n",
+      "('AE202', 38768, 10, 231407) <Response [200]>\n",
+      "('AE202', 38768, 11, 231407) <Response [200]>\n",
+      "('AE202', 38768, 11, 231407) <Response [200]>\n",
+      "('AE202', 38768, 12, 231407) <Response [200]>\n",
+      "('AE202', 38768, 12, 231407) <Response [200]>\n",
+      "('AE202', 38768, 13, 231407) <Response [200]>\n",
+      "('AE202', 38768, 14, 231407) <Response [200]>\n",
+      "('AE202', 38768, 14, 231407) <Response [200]>\n",
+      "('AE202', 38768, 15, 231407) <Response [200]>\n",
+      "('AE202', 38768, 16, 231407) <Response [200]>\n",
+      "('AE202', 38768, 16, 231407) <Response [200]>\n",
+      "('AE202', 38768, 18, 231407) <Response [200]>\n",
+      "('AE202', 38768, 18, 231407) <Response [200]>\n",
+      "('AE202', 38768, 19, 231407) <Response [200]>\n",
+      "('AE202', 38768, 19, 231407) <Response [200]>\n",
+      "('AE202', 38768, 31, 231407) <Response [200]>\n",
+      "('AE202', 38768, 32, 231407) <Response [200]>\n",
+      "('AE202', 38768, 32, 231407) <Response [200]>\n",
+      "('AE202', 38768, 35, 231407) <Response [200]>\n",
+      "('AE202', 38768, 35, 231407) <Response [200]>\n",
+      "('AE202', 38768, 36, 231407) <Response [200]>\n",
+      "('AE202', 38768, 39, 231407) <Response [200]>\n",
+      "('AE202', 38768, 39, 231407) <Response [200]>\n",
+      "('AE202', 38768, 1, 265932) <Response [200]>\n",
+      "('AE202', 38768, 2, 265932) <Response [200]>\n",
+      "('AE202', 38768, 3, 265932) <Response [200]>\n",
+      "('AE202', 38768, 4, 265932) <Response [200]>\n",
+      "('AE202', 38768, 7, 265932) <Response [200]>\n",
+      "('AE202', 38768, 8, 265932) <Response [200]>\n",
+      "('AE202', 38768, 13, 265932) <Response [200]>\n",
+      "('AE202', 38768, 14, 265932) <Response [200]>\n",
+      "('AE202', 38768, 15, 265932) <Response [200]>\n",
+      "('AE202', 38768, 16, 265932) <Response [200]>\n",
+      "('AE202', 38768, 17, 265932) <Response [200]>\n",
+      "('AE202', 38768, 18, 265932) <Response [200]>\n",
+      "('AE202', 38768, 20, 265932) <Response [200]>\n",
+      "('AE202', 38768, 33, 265932) <Response [200]>\n",
+      "('AE202', 38768, 34, 265932) <Response [200]>\n",
+      "('AE202', 38768, 6, 265932) <Response [200]>\n",
+      "('AE202', 38768, 24, 265932) <Response [200]>\n",
+      "('AE202_2', 35537, 4, 330825) <Response [200]>\n",
+      "('AE202_2', 35537, 6, 330825) <Response [200]>\n",
+      "('AE202_2', 35537, 7, 330825) <Response [200]>\n",
+      "('AE202_2', 35537, 14, 330825) <Response [200]>\n",
+      "('AE202_2', 35537, 19, 330825) <Response [200]>\n",
+      "('AE202_2', 35537, 1, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 2, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 3, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 4, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 5, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 6, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 7, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 8, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 11, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 13, 381416) <Response [200]>\n",
+      "('AE202_2', 35537, 14, 381416) <Response [200]>\n",
+      "('AE202', 38768, 2, 386442) <Response [200]>\n",
+      "('AE202', 38768, 3, 386442) <Response [200]>\n",
+      "('AE202', 38768, 20, 386442) <Response [200]>\n",
+      "('AE202', 38768, 37, 386442) <Response [200]>\n",
+      "('AE202', 38768, 4, 399669) <Response [200]>\n",
+      "('AE202_2', 35537, 18, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 21, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 22, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 25, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 26, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 27, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 28, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 29, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 34, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 36, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 37, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 38, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 1, 409256) <Response [200]>\n",
+      "('AE202_2', 35537, 12, 409256) <Response [200]>\n",
+      "('AE202', 38768, 33, 468784) <Response [200]>\n",
+      "('AE202', 38768, 1, 475581) <Response [200]>\n",
+      "('AE202', 38768, 2, 475581) <Response [200]>\n",
+      "('AE202', 38768, 3, 475581) <Response [200]>\n",
+      "('AE202', 38768, 4, 475581) <Response [200]>\n",
+      "('AE202', 38768, 5, 475581) <Response [200]>\n",
+      "('AE202', 38768, 6, 475581) <Response [200]>\n",
+      "('AE202', 38768, 7, 475581) <Response [200]>\n",
+      "('AE202', 38768, 9, 475581) <Response [200]>\n",
+      "('AE202', 38768, 10, 475581) <Response [200]>\n",
+      "('AE202', 38768, 11, 475581) <Response [200]>\n",
+      "('AE202', 38768, 12, 475581) <Response [200]>\n",
+      "('AE202', 38768, 13, 475581) <Response [200]>\n",
+      "('AE202', 38768, 14, 475581) <Response [200]>\n",
+      "('AE202', 38768, 15, 475581) <Response [200]>\n",
+      "('AE202', 38768, 16, 475581) <Response [200]>\n",
+      "('AE202', 38768, 17, 475581) <Response [200]>\n",
+      "('AE202', 38768, 19, 475581) <Response [200]>\n",
+      "('AE202_2', 35537, 17, 480428) <Response [200]>\n",
+      "('AE202_2', 35537, 19, 480428) <Response [200]>\n",
+      "('AE202_2', 35537, 20, 480428) <Response [200]>\n",
+      "('AE202_2', 35537, 21, 480428) <Response [200]>\n",
+      "('AE202_2', 35537, 22, 480428) <Response [200]>\n",
+      "('AE202_2', 35537, 23, 480428) <Response [200]>\n",
+      "('AE202', 38768, 2, 500230) <Response [200]>\n",
+      "('AE202', 38768, 3, 500230) <Response [200]>\n",
+      "('AE202', 38768, 4, 500230) <Response [200]>\n",
+      "('AE202', 38768, 5, 500230) <Response [200]>\n",
+      "('AE202', 38768, 6, 500230) <Response [200]>\n",
+      "('AE202', 38768, 8, 500230) <Response [200]>\n",
+      "('AE202', 38768, 9, 500230) <Response [200]>\n",
+      "('AE202', 38768, 11, 500230) <Response [200]>\n",
+      "('AE202', 38768, 13, 500230) <Response [200]>\n",
+      "('AE202', 38768, 14, 500230) <Response [200]>\n",
+      "('AE202', 38768, 18, 500230) <Response [200]>\n",
+      "('AE202', 38768, 19, 500230) <Response [200]>\n",
+      "('AE202', 38768, 22, 500230) <Response [200]>\n",
+      "('AE202', 38768, 23, 500230) <Response [200]>\n",
+      "('AE202', 38768, 24, 500230) <Response [200]>\n",
+      "('AE202', 38768, 28, 500230) <Response [200]>\n",
+      "('AE202_2', 35537, 3, 601829) <Response [200]>\n",
+      "('AE202_2', 35537, 1, 609627) <Response [200]>\n",
+      "('AE202_2', 35537, 5, 609627) <Response [200]>\n",
+      "('AE202_2', 35537, 7, 609627) <Response [200]>\n",
+      "('AE202_2', 35537, 9, 609627) <Response [200]>\n",
+      "('AE202', 38768, 3, 621769) <Response [200]>\n",
+      "('AE202', 38768, 4, 621769) <Response [200]>\n",
+      "('AE202', 38768, 5, 621769) <Response [200]>\n",
+      "('AE202', 38768, 6, 621769) <Response [200]>\n",
+      "('AE202', 38768, 7, 621769) <Response [200]>\n",
+      "('AE202', 38768, 8, 621769) <Response [200]>\n",
+      "('AE202', 38768, 10, 621769) <Response [200]>\n",
+      "('AE202', 38768, 12, 621769) <Response [200]>\n",
+      "('AE202', 38768, 15, 621769) <Response [200]>\n",
+      "('AE202', 38768, 16, 621769) <Response [200]>\n",
+      "('AE202_2', 35537, 2, 678855) <Response [200]>\n",
+      "('AE202_2', 35537, 3, 678855) <Response [200]>\n",
+      "('AE202_2', 35537, 5, 678855) <Response [200]>\n",
+      "('AE202', 38768, 1, 688628) <Response [200]>\n",
+      "('AE202', 38768, 2, 688628) <Response [200]>\n",
+      "('AE202', 38768, 3, 688628) <Response [200]>\n",
+      "('AE202', 38768, 4, 688628) <Response [200]>\n",
+      "('AE202', 38768, 5, 688628) <Response [200]>\n",
+      "('AE202', 38768, 9, 688628) <Response [200]>\n",
+      "('AE202', 38768, 10, 688628) <Response [200]>\n",
+      "('AE202', 38768, 12, 688628) <Response [200]>\n",
+      "('AE202', 38768, 13, 688628) <Response [200]>\n",
+      "('AE202', 38768, 14, 688628) <Response [200]>\n",
+      "('AE202', 38768, 19, 688628) <Response [200]>\n",
+      "('AE202', 38768, 20, 688628) <Response [200]>\n",
+      "('AE202', 38768, 24, 688628) <Response [200]>\n",
+      "('AE202', 38768, 27, 688628) <Response [200]>\n",
+      "('AE202', 38768, 28, 750185) <Response [200]>\n",
+      "('AE202', 38768, 34, 750185) <Response [200]>\n",
+      "('AE202', 38768, 37, 750185) <Response [200]>\n",
+      "('AE202', 38768, 39, 750185) <Response [200]>\n",
+      "('AE202', 38768, 40, 750185) <Response [200]>\n",
+      "('AE202', 38768, 42, 750185) <Response [200]>\n",
+      "('AE202', 38768, 44, 750185) <Response [200]>\n",
+      "('AE202', 38768, 46, 750185) <Response [200]>\n",
+      "('AE202', 38768, 58, 750185) <Response [200]>\n",
+      "('AE202', 38768, 60, 750185) <Response [200]>\n",
+      "('AE202', 38768, 62, 750185) <Response [200]>\n",
+      "('AE202', 38768, 63, 750185) <Response [200]>\n",
+      "('AE202', 38768, 64, 750185) <Response [200]>\n",
+      "('AE202', 38768, 65, 750185) <Response [200]>\n",
+      "('AE202', 38768, 66, 750185) <Response [200]>\n",
+      "('AE202', 38768, 67, 750185) <Response [200]>\n",
+      "('AE202', 38768, 69, 750185) <Response [200]>\n",
+      "('AE202', 38768, 70, 750185) <Response [200]>\n",
+      "('AE202', 38768, 72, 750185) <Response [200]>\n",
+      "('AE202', 38768, 74, 750185) <Response [200]>\n",
+      "('AE202', 38768, 76, 750185) <Response [200]>\n",
+      "('AE202', 38768, 77, 750185) <Response [200]>\n",
+      "('AE202', 38768, 79, 750185) <Response [200]>\n",
+      "('AE202', 38768, 82, 750185) <Response [200]>\n",
+      "('AE202', 38768, 83, 750185) <Response [200]>\n",
+      "('AE202', 38768, 85, 750185) <Response [200]>\n",
+      "('AE202', 38768, 89, 750185) <Response [200]>\n",
+      "('AE202', 38768, 91, 750185) <Response [200]>\n",
+      "('AE202', 38768, 93, 750185) <Response [200]>\n",
+      "('AE202', 38768, 94, 750185) <Response [200]>\n",
+      "('AE202', 38768, 95, 750185) <Response [200]>\n",
+      "('AE202', 38768, 2, 750185) <Response [200]>\n",
+      "('AE202', 38768, 3, 750185) <Response [200]>\n",
+      "('AE202', 38768, 4, 750185) <Response [200]>\n",
+      "('AE202', 38768, 5, 750185) <Response [200]>\n",
+      "('AE202', 38768, 7, 750185) <Response [200]>\n",
+      "('AE202', 38768, 11, 750185) <Response [200]>\n",
+      "('AE202', 38768, 12, 750185) <Response [200]>\n",
+      "('AE202', 38768, 26, 750185) <Response [200]>\n",
+      "('AE202', 38768, 22, 763795) <Response [200]>\n",
+      "('AE202', 38768, 30, 763795) <Response [200]>\n",
+      "('AE202', 38768, 42, 763795) <Response [200]>\n",
+      "('AE202', 38768, 43, 763795) <Response [200]>\n",
+      "('AE202', 38768, 19, 763795) <Response [200]>\n",
+      "('AE202', 38768, 6, 833393) <Response [200]>\n",
+      "('AE202', 38768, 9, 833393) <Response [200]>\n"
      ]
     }
    ],
