updated for API response

--- a/pyhack2021-balaji-sathyamurthy.ipynb
+++ b/pyhack2021-balaji-sathyamurthy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,14 +163,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "<Response [200]>\n",
+      "all requests succeeded\n"
+     ]
+    }
+   ],
    "source": [
+    "import json\n",
     "def main():\n",
     "    \n",
     "    objgetData = getData()\n",
     "    objidentifyType = identifyType()\n",
+    "    \n",
+    "    failedRequest = {}\n",
     "    \n",
     "    dictSubjList = objgetData.getSubjectList(\"StudyHack\",\"ae\")\n",
     "    \n",
@@ -194,7 +279,6 @@
     "                    formname,formid,formidx,_ = key\n",
     "                \n",
     "                    for i in range(len(result[key])):\n",
-    "                        \n",
     "                        payload = {\n",
     "                                  \"email_address\": \"bsathyamur@gmail.com\",\n",
     "                                  \"formname\": str(formname),\n",
@@ -203,20 +287,23 @@
     "                                  \"type\": str(result[key][i]),\n",
     "                                  \"subjectid\": str(subjId)\n",
     "                                  }\n",
-    "                        resp = requests.post(url = postURL,data = payload) \n",
-    "                    \n",
     "                        \n",
-    "                    \n",
+    "                        resp = requests.post(url = postURL,json = payload) \n",
+    "\n",
+    "                        respJson = resp.json()\n",
+    "                        \n",
+    "                        if respJson[\"status\"] != \"success\":\n",
+    "                            failedRequest[respJson[\"request_id\"]] = payload\n",
+    "    return failedRequest\n",
+    "                                    \n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    out = main()\n",
+    "    if len(out) == 0:\n",
+    "        print(\"All requests succeeded sucessfully.\")\n",
+    "    else:\n",
+    "        print(\"Some requests have been failed, please find below failed log information\")\n",
+    "        print(out)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
